it/cp-dev/grafana/ingress.yaml
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: it-grafana
  labels:
    helm.sh/chart: grafana-5.6.12
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - grafana-dev.cp.lsst.org
      secretName: grafana-tls
  rules:
  - host: grafana-dev.cp.lsst.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port: 
                number: 80
